--- a/التنافس.html
+++ b/التنافس.html
@@ -34,7 +34,7 @@
                           <p>يس جهاز "ساميت" هو الوحيد الذي يعمل على إيجاد حلول للتغلب على الفيروس. في ولاية تكساس وبالتحديد في مركز الحوسبة المتقدمة بجامعة تكساس بمدينة أوستن يقبع سوبر كمبيوتر آخر إسمه "فرونتيرا" (Frontera) يقوم أيضاً باستخدام المحاكاة لدراسة هذا الفيروس ونقاط ضعفه وإكتشاف وسائل مبتكرة لمواجهته.
 
                             هناك قائمة طويلة من أجهزة السوبر كمبيوتر التي تعمل الآن على مستوى العالم  لتساعد الجنس البشري في حربه ضد الكورونا. إذا تركنا الولايات المتحدة وعبرنا المحيط إلى أوروبا سنجد أجهزة سوبر كمبيوترفي معامل (GENCI) بفرنسا تعمل في الخطوط الأمامية في الحرب على الفيروس.</p>
-           <p><a href="الصفحه الرئيسيه.html">الصفحه الرئيسيه</a></p>
+           <p><a href="index.html">الصفحه الرئيسيه</a></p>
        </div>
     </body>
 </html>
