--- a/اللقاح.html
+++ b/اللقاح.html
@@ -36,7 +36,7 @@
                                 في هذه المحنة العالميةنسمع أحيانا عن تجربة عقار معين وقد بدأت معامل الأبحاث الطبية في عدة دول في تجربة لقاحات على الإنسان مباشرة بدون التجربة على الحيوان إختصاراً للوقت. في 16 مارس الجاري تطوعت سيدة أمريكية من مدينة سياتل لتصبح أول سيدة فيأمريكا  تخضع لاختبار لقاح معملي ضد هذا الفيروس. هذه هي المرحلة الأولى في طريق الوصول إلى لقاح. في تلك المرحلة يتم تجربة لقاح معين على عدد صغير من الناس غالباً ما بين عشرين لثمانين شخص ليرى العلماء تأثير هذا اللقاح على الأصحاء من حيث استجابة جهازهم المناعي له وإنتاجه أجسام مضادة للفيروس والآثار الجانبية للقاح. إذا نجحت المرحلة الأولي ننتقل إلى المرحلة الثانية وهي  التجربة على عدد أكبر من الناس وبجرعات مختلفة حتى يتم تحديد الجرعة المناسبة للشخص. المرحلة الثالثة تشبه المرحلة الثانية لكن على عدد أكبر كثيراً بعدها تتم الموافقة على اللقاح ويصل للناس ويصاحبه مرحلة رابعة هي مراقبة أية أعراض جانبية قد تصيب أي شخص ولم تكتشفها المراحل الثلاثة السابقة. هذه المرحلة الرابعة تتم واللقاح متداول بالفعل.
                                 
                                 لكن ماذا لو فشل هذا اللقاح في إحدى المراحل الثلاثة الأولى قبل أن يصل للناس؟ هل نكون قد أضعنا وقتاً ثميناً؟ الإجابة هي لا لأنه تتم تجربة أعداد كبيرة من اللقاحات على مستوى العالم في وقت واحد وقد يفشل بعضها وينجح البعض الآخر. لكن كيف يختار أو يصمم العلماء تلك اللقاحات؟ هنا يأتي دور السوبر كمبيوتر.</p>
-           <p><a href="الصفحه الرئيسيه.html">الصفحه الرئيسيه</a></p>
+           <p><a href="index.html">الصفحه الرئيسيه</a></p>
        </div>
     </body>
 </html>
