Update ساميت و نشأته.html

--- a/ساميت و نشأته.html
+++ b/ساميت و نشأته.html
@@ -37,7 +37,7 @@
 في السابق تمكن هذا الجهاز من تحديد تغيرات في الخلايا تسبق مرض الألزهايمر وحلل الجينات التي تسبب إدمان الأفيون وتمكن من التنبؤ ببعض العواصف القوية والأعاصير عن طريق المحاكاة الدقيقة، فهل يساعد على إكتشاف علاج للكورونا؟
 
 عن طريق المحاكاة حلل جهاز ساميت ثمانية آلاف(8000) مركب كيميائي وكيفية تفاعلها مع الخلايا والفيروس، وقام بتحديد  77 مركب منها لها تأثير إيجابي في إيقاف خطر الفيروس وتم نشر هذا التحليل في ورقة علمية خلال الشهر الجاري. هل ترى الآن من أين تأتي الشركات والمعامل باللقاحات التي تجربها على الإنسان؟</p>
-            <p><a href="الصفحه الرئيسيه.html">الصفحه الرئيسيه</a></p>
+            <p><a href="index.html">الصفحه الرئيسيه</a></p>
         </div>
     </body>
 </html>
